test/sema/traits/ambigous_trait_function_call.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait A<T> {
  fn foo(self: Self) {}
}

struct S {
  impl A<number> {
    fn foo(self: Self) {}
  }

  impl A<unit> {
    fn foo(self: Self) {}
  }
}

fn main() {
  let s = S{};

  // CHECK: [[# @LINE + 1]]:5: error: ambigous member function reference
  s.foo();
  
  // CHECK: [[# @LINE + 1]]:6: error: ambigous member function reference
  S::foo();
}
